--- a/events.html
+++ b/events.html
@@ -8,7 +8,7 @@
     <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script>
-      $(document).ready(function() {
+      $(document).ready(() => {
         /*
     	16. Create a button on a web page. Use the .click() method to display an alert message to the 
         user indicating that the button has been clicked when the button is actually clicked. 
